--- a/app/src/main/res/layout/activity_genre.xml
+++ b/app/src/main/res/layout/activity_genre.xml
@@ -35,7 +35,7 @@
         android:maxLines="3"
         android:text="genre info text"
         android:textColor="@color/customblack"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="italic" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#80717171"
-            app:tabGravity="fill"
+            app:tabGravity="center"
             app:tabMaxWidth="0dp"
             app:tabIndicatorColor="@color/purple_500"
             app:tabIndicatorFullWidth="false"
